--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -8,3 +8,14 @@ a.footnote-ref, a.footnote-backref {
 .main-pages {
     font-weight: bold;
 }
+
+.post .post-content figcaption {
+    font-weight: 400;
+    font-style: italic;
+    font-size: 16px;
+    line-height: 1.3;
+    color: #666665;
+    outline: 0;
+    z-index: 300;
+    text-align: center;
+    }
