--- a/assets/css/extended/terminal.css
+++ b/assets/css/extended/terminal.css
@@ -3,25 +3,35 @@
 }
 
 .terminal p {
-    margin-bottom: 15px;
+    margin-bottom: 7px;
 }
 
 .terminal {
     font-family: menlo,consolas,monospace;
-    /* font-size: 1.25em; */
     font-weight: bold;
     color: white;
     text-align: left;
     line-height: 20px;
 }
 
+@media only screen and (max-width: 600px) {
+    .terminal {
+          font-size: 1rem;
+    }
+  }
+
 .terminal>.terminal--input {
     counter-increment: input
 }
 
-.terminal>.terminal--input:before {
-    content: "taylor@jadin.me ~ $ ";
+.terminal>.terminal--prompt:before {
+    content: "taylor@jadin.me ~";
     color: #A6E22E
+}
+
+.terminal>.terminal--input:before {
+    content: "$ ";
+    color: white;
 }
 
 .terminal>.terminal--input:last-child:after {
@@ -83,32 +93,4 @@
     to {
         opacity: 0
     }
-}
-
-.nav-subscribe {
-    opacity: 0.8;
-    padding-right: 10px;
-}
-
-.subscribe-button {
-    margin-right: 5px;
-}
-
-.social-links {
-    display: none;
-}
-
-.post .post-content figcaption {
-font-weight: 400;
-font-style: italic;
-font-size: 16px;
-line-height: 1.3;
-color: #666665;
-outline: 0;
-z-index: 300;
-text-align: center;
-}
-
-.subscribe-form, .post-full-footer {
-    display: none;
 }
