--- a/layouts/partials/home_info.html
+++ b/layouts/partials/home_info.html
@@ -2,8 +2,10 @@
 <article class="first-entry home-info">
     <div class=" terminal ">
         <p class="terminal--header ">Last login: <span id="time"></span> on ttys000</p>
+        <p class=" terminal--prompt "></p>
         <p class=" terminal--input ">cat aboutMe.txt</p>
         <p class=" terminal--output "><p>{{ .Content1 | markdownify }}</p><p>{{ .Content2 | markdownify }}</p>
+        <p class=" terminal--prompt "></p>
         <p class=" terminal--input "></p>
     </div>
     <script>
