--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -19,3 +19,8 @@ a.footnote-ref, a.footnote-backref {
     z-index: 300;
     text-align: center;
     }
+
+figcaption {
+    text-align: center;
+    font-style: italic;
+}
