--- a/layouts/shortcodes/foldergallery.html
+++ b/layouts/shortcodes/foldergallery.html
@@ -9,6 +9,7 @@
         object-fit: cover;
         margin: 2px;
         display: flex;
+        box-shadow: none;
     }
 
     div.gallery a img {
