--- a/layouts/shortcodes/foldergallery.html
+++ b/layouts/shortcodes/foldergallery.html
@@ -1,31 +1,10 @@
-<style>
-    div.gallery {
-        display: flex;
-        flex-wrap: wrap;
-    }
-
-    div.gallery a {
-        flex-grow: 1;
-        object-fit: cover;
-        margin: 2px;
-        display: flex;
-        box-shadow: none;
-    }
-
-    div.gallery a img {
-        height: 200px;
-        object-fit: cover;
-        flex-grow: 1;
-    }
-</style>
-
 <div class="gallery">
     {{ $path := print "content/" .Page.File.Dir (.Get "src") }}
     {{ $url  := print (.Get "src") }}
     {{ range (readDir $path) }}
         {{ $src := print $url "/" .Name }}
         <a data-fancybox="gallery" href="{{ $src }}" data-caption="{{ .Name }}">
-            <img class="gallery-img" src="{{ $src }}" alt="{{ .Name }}" title="{{ .Name }}" >  <br/>
+            <img class="no-zoom" src="{{ $src }}" alt="{{ .Name }}" title="{{ .Name }}" >  <br/>
         </a>
     {{ end }}
 </div>
